--- a/DOM/one.html
+++ b/DOM/one.html
@@ -4,13 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM learning</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        .bg-black{
+            background-color:black;
+            color: #fff;
+        }
+    </style>
 </head>
-<body>
-    <div class="bg-black">
-        <h1 class="heading" >dom learning on chai aur code</h1>
+<body class="bg-black">
+    <div >
+        <h1 id="title" class="heading" >dom learning on chai <span>hi there</span> aur code</h1>
         <p>Lorem ipsum dolor sit amet.</p>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <ul>
+            <li class="list-item" >one</li>
+            <li class="list-item" >two</li>
+            <li class="list-item" >three</li>
+            <li class="list-item" >four</li>
+        </ul>
         <!-- dom:-document object model -->
-        
+        <script src="one.js"></script>
     </div>
 </body>
 </html>
